# TNSP

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  .travis.yml  CHANGELOG.org  CITATION.cff  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.org  CONTRIBUTING_zh.org  Data.hpp  Dockerfile  Doxyfile  FindTAT.cmake  Heisenberg_MPS.cpp  Heisenberg_MPS_SU.cpp  Heisenberg_MPS_SU.stdout  Heisenberg_MPS_SU_env.cpp  Heisenberg_MPS_SU_env.stdout  Heisenberg_MPS_SU_with_site.cpp  Heisenberg_PEPS_SU.cpp  Heisenberg_PEPS_SU.cpp.tmp  Lattice.hpp  Lensor.hpp  Makefile  Node.hpp  PKGBUILD  README.md  README.org  README_zh.org  Site.hpp  TAT-config.cmake.in  TAT.cc  TAT.cpp  TAT.hpp  TAT.output  TAT.pc.in  Tensor.hpp  (+33 more)
PyScalapack/: .coveragerc  README.org  README_zh.org  pyproject.toml  setup.py
PyScalapack/PyScalapack/: __init__.py
PyScalapack/tests/: test_create_array.py  test_create_context.py  test_gemm.py  test_redistribute.py
PyTAT/: .dealing_MPI_CFermi.cpp  .dealing_MPI_CFermiU1.cpp  .dealing_MPI_CFermiZ2.cpp  .dealing_MPI_CNo.cpp  .dealing_MPI_CU1.cpp  .dealing_MPI_CZ2.cpp  .dealing_MPI_DFermi.cpp  .dealing_MPI_DFermiU1.cpp  .dealing_MPI_DFermiZ2.cpp  .dealing_MPI_DNo.cpp  .dealing_MPI_DU1.cpp  .dealing_MPI_DZ2.cpp  .dealing_MPI_SFermi.cpp  .dealing_MPI_SFermiU1.cpp  .dealing_MPI_SFermiZ2.cpp  .dealing_MPI_SNo.cpp  .dealing_MPI_SU1.cpp  .dealing_MPI_SZ2.cpp  .dealing_MPI_ZFermi.cpp  .dealing_MPI_ZFermiU1.cpp  .dealing_MPI_ZFermiZ2.cpp  .dealing_MPI_ZNo.cpp  .dealing_MPI_ZU1.cpp  .dealing_MPI_ZZ2.cpp  .dealing_Tensor_CFermi.cpp  .dealing_Tensor_CFermiU1.cpp  .dealing_Tensor_CFermiZ2.cpp  .dealing_Tensor_CNo.cpp  .dealing_Tensor_CU1.cpp  .dealing_Tensor_CZ2.cpp  .dealing_Tensor_DFermi.cpp  .dealing_Tensor_DFermiU1.cpp  .dealing_Tensor_DFermiZ2.cpp  .dealing_Tensor_DNo.cpp  .dealing_Tensor_DU1.cpp  .dealing_Tensor_DZ2.cpp  .dealing_Tensor_SFermi.cpp  .dealing_Tensor_SFermiU1.cpp  .dealing_Tensor_SFermiZ2.cpp  .dealing_Tensor_SNo.cpp  (+32 more)
PyTAT/generated_code/: dealing_MPI_CFermi.cpp  dealing_MPI_CFermiU1.cpp  dealing_MPI_CFermiZ2.cpp  dealing_MPI_CNo.cpp  dealing_MPI_CU1.cpp  dealing_MPI_CZ2.cpp  dealing_MPI_DFermi.cpp  dealing_MPI_DFermiU1.cpp  dealing_MPI_DFermiZ2.cpp  dealing_MPI_DNo.cpp  dealing_MPI_DU1.cpp  dealing_MPI_DZ2.cpp  dealing_MPI_SFermi.cpp  dealing_MPI_SFermiU1.cpp  dealing_MPI_SFermiZ2.cpp  dealing_MPI_SNo.cpp  dealing_MPI_SU1.cpp  dealing_MPI_SZ2.cpp  dealing_MPI_ZFermi.cpp  dealing_MPI_ZFermiU1.cpp  dealing_MPI_ZFermiZ2.cpp  dealing_MPI_ZNo.cpp  dealing_MPI_ZU1.cpp  dealing_MPI_ZZ2.cpp  dealing_Tensor_CFermi.cpp  dealing_Tensor_CFermiU1.cpp  dealing_Tensor_CFermiZ2.cpp  dealing_Tensor_CNo.cpp  dealing_Tensor_CU1.cpp  dealing_Tensor_CZ2.cpp  dealing_Tensor_DFermi.cpp  dealing_Tensor_DFermiU1.cpp  dealing_Tensor_DFermiZ2.cpp  dealing_Tensor_DNo.cpp  dealing_Tensor_DU1.cpp  dealing_Tensor_DZ2.cpp  dealing_Tensor_FermiU1_C.cpp  dealing_Tensor_FermiU1_D.cpp  dealing_Tensor_FermiU1_S.cpp  dealing_Tensor_FermiU1_Z.cpp  (+36 more)
PyTAT/pyodide/PyTAT/: meta.yaml  setup.py
PyTAT/pyodide/TAT/: meta.yaml  setup.py
PyTAT/tests/: test_arrow_and_parity.py  test_callable.py  test_clear_symmetry.py  test_conjugate.py  test_contract.py  test_contract_with_numpy.py  test_create_fermi_tensor.py  test_create_normal_tensor.py  test_create_symmetry_tensor.py  test_edge.py  test_edge_operator.py  test_edge_rename.py  test_exponential.py  test_fuse_with_numpy.py  test_identity.py  test_module_alias.py  test_norm.py  test_qr.py  test_qr_with_numpy.py  test_random.py  test_scalar.py  test_split_and_merge.py  test_split_to_no_edge.py  test_svd.py  test_svd_with_numpy.py  test_symmetry.py  test_trace.py  test_trace_with_numpy.py  test_transform_map_and_set.py  test_transpose.py  test_type_conversion.py
PyTAT/tests/old_test/: check_aux.py  random_test_contract.py  random_test_fuse.py  random_test_qr.py  random_test_svd.py  random_test_trace.py
TAT/: CMakeLists.txt  Makefile  README.org  README_zh.org  TAT-config.cmake.in  TAT.pc.in  compile_information.c++  const_integral.c++  core.hpp  edge.hpp  empty_list.c++  hash_absorb.c++  init.hpp  io.hpp  log.c++  log_and_exception.c++  misc.hpp  multidimension_span.c++  name.hpp  overloaded.c++  scalar.hpp  scalar_traits.c++  shared_ptr.c++  std.c++  symmetry.hpp  tensor.hpp  timer.c++  type_alias.c++  unordered_parameter.c++  windows_console_guard.c++
TAT/include/TAT/implement/: clear_symmetry.hpp  conjugate.hpp  contract.hpp  edge_operator.hpp  exponential.hpp  identity.hpp  qr.hpp  trace.hpp
TAT/include/TAT/miscellaneous/: io.hpp  scalar.hpp
TAT/include/TAT/structure/: name.hpp  symmetry.hpp  tensor.hpp
TAT/include/TAT/utility/: common_variable.hpp  multidimension_span.hpp  shared_ptr.hpp
TAT/tests/: test_binary_io.cpp  test_binary_io_edge.cpp  test_clear_symmetry.cpp  test_conjugate.cpp  test_const_integral.cpp  test_contract.cpp  test_contract_order.cpp  test_create_fermi_tensor.cpp  test_create_symmetry_tensor.cpp  test_edge.cpp  test_edge_operator.cpp  test_edge_rename.cpp  test_exponential.cpp  test_identity.cpp  test_mpi.cpp  test_multidimension_span.cpp  test_norm.cpp  test_qr.cpp  test_scalar.cpp  test_shared_ptr.cpp  test_special_stringstring.cpp  test_split_and_merge.cpp  test_split_to_no_edge.cpp  test_svd.cpp  test_tensor_core.cpp  test_text_io.cpp  test_text_io_symmetry.cpp  test_trace.cpp  test_transpose.cpp  test_type_conversion.cpp
lazy_graph/: README.org  README_zh.org  pyproject.toml  setup.py
lazy_graph/lazy/: __init__.py
lazy_graph/tests/: test_basic_usage.py  test_check_valid.py  test_copy_duplicated.py  test_copy_lazy_graph.py  test_different_arguments.py  test_long_chain.py  test_partial_copy.py  test_reset_during_copy.py  test_reset_upstream.py
test-cuda/: CMakeLists.txt  main.cpp
tetraku/: README.org  README_zh.org  pyproject.toml  setup.py
tetraku/tetraku/ansatzes/: marshall.py
tetraku/tetraku/models/: __init__.py
tetraku/tetraku/networks/: __init__.py  exact.py
tnsp_bridge/: README.org  README_zh.org  pyproject.toml  setup.py
tnsp_bridge/bridge/: __init__.py
(+825 files in other folders)
