[build-system]
requires = ["scikit-build-core", "ninja", "pybind11", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "PyTAT"
dynamic = ["version", "readme"]
dependencies = [
  "numpy",
]
authors = [
  {email = "zh970205@mail.ustc.edu.cn", name = "Hao Zhang"},
]
description = "python binding for TAT(TAT is A Tensor library)"
license = {text = "GPLv3"}
keywords = ["tensor", "tensor network", "tensor network state", "PEPS", "MPS", "quantum many body system"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/USTC-TNS/TAT/tree/main/PyTAT"
Repository = "https://github.com/USTC-TNS/TAT.git"
Issues = "https://github.com/USTC-TNS/TAT/issues"
Changelog = "https://github.com/USTC-TNS/TAT/blob/main/CHANGELOG.org"

[tool.scikit-build]
experimental = true
cmake.verbose = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
metadata.readme.provider = "maybe_readme"
metadata.readme.provider-path = "."
sdist.exclude = ["*"]
sdist.include = [
  "/parent/include",
  "/parent/CMakeLists.txt",
  "/parent/TAT-config.cmake.in",
  "/parent/TAT.pc.in",
  "/parent/PyTAT/dealing_tensor.cpp.in",
  "/parent/PyTAT/PyTAT.hpp",
  "/parent/PyTAT/PyTAT.cpp",
  "/CMakeLists.txt",
  "/maybe_readme.py",
  "/pyproject.toml",
  "/README.org",
  "/test_wasm.js",
  "/tests"
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
TAT_USE_MPI = "OFF"
TAT_BUILD_TEST = "OFF"

[tool.setuptools_scm]
root = ".."
