[build-system]
requires = ["setuptools >= 62.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tnsp_bridge"
dynamic = ["version", "dependencies", "readme"]
requires-python = ">=3.7"
authors = [
  {email = "zh970205@mail.ustc.edu.cn", name = "Hao Zhang"},
]
description = "bridge from TNSP to TAT"
license = {text = "GPLv3"}
keywords = ["tensor", "tensor network", "tensor network state", "PEPS", "MPS", "quantum many body system"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/USTC-TNS/TNSP/tree/main/tnsp_bridge"
Repository = "https://github.com/USTC-TNS/TNSP.git"
Issues = "https://github.com/USTC-TNS/TNSP/issues"
Changelog = "https://github.com/USTC-TNS/TNSP/blob/main/CHANGELOG.org"

[tool.setuptools.packages.find]
exclude = ["tests"]
